<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Broncomania</string>
    <string name="app_id">768185353295607</string>
    
    <string name="home_title">Jaime Rodriguez "El Bronco"</string>
    <string name="home_phrase">JUNTOS TÚ Y YO VAMOS A LOGRAR LO QUE NUEVO LEÓN NECESITA</string>
    <string name="home_description_title">¡Vamos a entrarle con todo!</string>
    <string name="home_description_body">Estamos haciendo historia, no podrán detener a estos broncos que queremos un Nuevo León con más oportunidades, más seguro y fuerte</string>
    <string name="home_join_button">Únete</string>
    <string name="donate_title">APÓYANOS DE CORAZÓN CON LA CAMPAÑA 100% TRANSPARENTE</string>
    <string name="donate_days">Días restantes</string>
    <string name="donatation_title">¡Deseo apoyar!</string>
    <string name="donate_donation">APOYAR</string>
    <string name="donate_transparency">TRANSPARENCIA</string>
    
    <string name="count_down_image_description"> count_down_image_description</string>
    <string name="donate_background_image_description"> donate_background_image_description</string>
    
    <string name="events_title_1"> Febrero 15 - Todo el día</string>
    <string name="events_title_2"> Febrero 21 - 1:00pm</string>
    <string name="events_title_3"> Febrero 22 - 10:30am</string>
    <string name="events_title_4"> Febrero 28 - 2:00pm</string>
    <string name="events_title_5"> Marzo 1 - 10:30am</string>
    <string name="events_title_6"> Marzo 7 - 1:00pm</string>
    <string name="events_title_7"> Marzo 8 - Todo el día</string>
    
    <string name="events_description_1"> Entrega de formatos en Av. Raúl Rangel Frías</string>
    <string name="events_description_2"> Reunión con voluntiarados en Casa Real</string>
    <string name="events_description_3"> Cabalgata bronco en Entrada Parque</string>
    <string name="events_description_4"> Reunion con voluntariados en Convex</string>
    <string name="events_description_5"> Activación Broncomanía en Macroplaza</string>
    <string name="events_description_6"> Reunión con Voluntariado en Salón La Diana</string>
    <string name="events_description_7"> Reunión con voluntariados en Casa Real </string>
    
    <string name="events_location_1"> #114 Col. Burócratas del Estado</string>
    <string name="events_location_2"> "Planta Baja" Morones Prieto #2300 </string>
    <string name="events_location_3"> "La Huasteca" Santa Catarina N.L.</string>
    <string name="events_location_4"> 16 de Septiembre 1511, Nuevas Colonias</string>
    <string name="events_location_5"> Zona centro Monterrey</string>
    <string name="events_location_6"> Guadalupe #208 Pte. Centro, Guadalupe, N.L.</string>
    <string name="events_location_7"> "Planta Baja" Morones Prieto #2300 </string>
    
    <string name="candidates_section_1"> Gobernador </string>
    <string name="candidates_section_2"> Alcaldías </string>
    <string name="candidates_section_3"> Diputación Local </string>
    
    <string name="candidates_section_1_person_name_1"> Jaime Rodriguez </string>
    <string name="candidates_section_1_person_location_1"> Nuevo León </string>
    
    <string name="candidates_section_2_person_name_1"> Gerardo Alanís </string>
    <string name="candidates_section_2_person_location_1"> Guadalupe </string>
    <string name="candidates_section_2_person_name_2"> Gabriel Almaguer </string>
    <string name="candidates_section_2_person_location_2"> Escobedo </string>
    <string name="candidates_section_2_person_name_3"> Luis Fernando Marín </string>
    <string name="candidates_section_2_person_location_3"> Apodaca </string>
    <string name="candidates_section_2_person_name_4"> Efrein García </string>
    <string name="candidates_section_2_person_location_4"> Santa Catarina </string>
    <string name="candidates_section_2_person_name_5"> Lorenia Canavati </string>
    <string name="candidates_section_2_person_location_5"> San Pedro </string>
    <string name="candidates_section_2_person_name_6"> César Adrián Valdés </string>
    <string name="candidates_section_2_person_location_6"> García </string>
    <string name="candidates_section_2_person_name_7"> Juan Ignacio Cantú </string>
    <string name="candidates_section_2_person_location_7"> Montemorelos </string>
    <string name="candidates_section_2_person_name_8"> Alfonso Jiménez </string>
    <string name="candidates_section_2_person_location_8"> Santiago </string>
    <string name="candidates_section_2_person_name_9"> Miguel González </string>
    <string name="candidates_section_2_person_location_9"> El Carmen </string>
    <string name="candidates_section_2_person_name_10"> Luis Pardo </string>
    <string name="candidates_section_2_person_location_10"> Hualahuises </string>
    
    <string name="candidates_section_3_person_name_1"> José Eduardo Santos </string>
    <string name="candidates_section_3_person_location_1"> Distrito 8 </string>
    <string name="candidates_section_3_person_name_2"> Olga Valentina Treviño </string>
    <string name="candidates_section_3_person_location_2"> Distrito 9 </string>
    <string name="candidates_section_3_person_name_3"> Antonio González </string>
    <string name="candidates_section_3_person_location_3"> Distrito 13 </string>
    <string name="candidates_section_3_person_name_4"> Martha Montes Salazar </string>
    <string name="candidates_section_3_person_location_4"> Distrito 14 </string>
    <string name="candidates_section_3_person_name_5"> Antonio Román Pereyra </string>
    <string name="candidates_section_3_person_location_5"> Distrito 15 </string>
    <string name="candidates_section_3_person_name_6"> José González </string>
    <string name="candidates_section_3_person_location_6"> Distrito 16 </string>
    <string name="candidates_section_3_person_name_7"> José Antonio Sánchez </string>
    <string name="candidates_section_3_person_location_7"> Distrito 17 </string>
    <string name="candidates_section_3_person_name_8"> Tatiana Clouthier  </string>
    <string name="candidates_section_3_person_location_8"> Distrito 18 </string>
    <string name="candidates_section_3_person_name_9"> Eva Trujillo Ramírez </string>
    <string name="candidates_section_3_person_location_9"> Distrito 19 </string>
    <string name="candidates_section_3_person_name_10"> Luis Guevara Garza </string>
    <string name="candidates_section_3_person_location_10"> Distrito 20 </string>
    <string name="candidates_section_3_person_name_11"> José Luis Rodela </string>
    <string name="candidates_section_3_person_location_11"> Distrito 21 </string>
    

</resources>
