<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <android.support.v4.view.ViewPager
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:id="@+id/pager"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" >
	    </android.support.v4.view.ViewPager>
	
	    <LinearLayout 
	        android:id="@+id/event_1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@color/dark_gray_event" >

		    <TextView
		        android:id="@+id/events_title_1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:layout_marginTop="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_title_1"
		        android:textAlignment="center"
		        android:textColor="@color/white_buttons"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_description_1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_description_1"
		        android:textAlignment="center"
		        android:textColor="@color/white_buttons"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_location_1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dp"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_location_1"
		        android:textAlignment="center"
		        android:textColor="@color/white_buttons"
		        android:textSize="14sp" />

	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/event_2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@color/light_gray_event" >
		    <TextView
		        android:id="@+id/events_title_2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:layout_marginTop="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_title_2"
		        android:textAlignment="center"
		        android:textColor="@color/dark_gray_event"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_description_2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_description_2"
		        android:textAlignment="center"
		        android:textColor="@color/dark_gray_event"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_location_2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dp"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_location_2"
		        android:textAlignment="center"
		        android:textColor="@color/dark_gray_event"
		        android:textSize="14sp" />
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/event_3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@color/dark_gray_event" >
		    <TextView
		        android:id="@+id/events_title_3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:layout_marginTop="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_title_3"
		        android:textAlignment="center"
		        android:textColor="@color/white_buttons"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_description_3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_description_3"
		        android:textAlignment="center"
		        android:textColor="@color/white_buttons"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_location_3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dp"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_location_3"
		        android:textAlignment="center"
		        android:textColor="@color/white_buttons"
		        android:textSize="14sp" />
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/event_4"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@color/light_purple_event" >
		    <TextView
		        android:id="@+id/events_title_4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:layout_marginTop="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_title_4"
		        android:textAlignment="center"
		        android:textColor="@color/dark_purple_event"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_description_4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_description_4"
		        android:textAlignment="center"
		        android:textColor="@color/dark_purple_event"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_location_4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dp"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_location_4"
		        android:textAlignment="center"
		        android:textColor="@color/dark_purple_event"
		        android:textSize="14sp" />
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/event_5"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@color/dark_purple_event" >
		    <TextView
		        android:id="@+id/events_title_5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:layout_marginTop="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_title_5"
		        android:textAlignment="center"
		        android:textColor="@color/white_buttons"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_description_5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_description_5"
		        android:textAlignment="center"
		        android:textColor="@color/white_buttons"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_location_5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dp"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_location_5"
		        android:textAlignment="center"
		        android:textColor="@color/white_buttons"
		        android:textSize="14sp" />
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/event_6"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@color/light_purple_event" >
		    <TextView
		        android:id="@+id/events_title_6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:layout_marginTop="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_title_6"
		        android:textAlignment="center"
		        android:textColor="@color/dark_purple_event"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/donate_description"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_description_1"
		        android:textAlignment="center"
		        android:textColor="@color/dark_purple_event"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_location_6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dp"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_location_6"
		        android:textAlignment="center"
		        android:textColor="@color/dark_purple_event"
		        android:textSize="14sp" />
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/event_7"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@color/dark_purple_event" >
		    <TextView
		        android:id="@+id/events_title_7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:layout_marginTop="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_title_7"
		        android:textAlignment="center"
		        android:textColor="@color/white_buttons"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_description_7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_description_7"
		        android:textAlignment="center"
		        android:textColor="@color/white_buttons"
		        android:textSize="14sp" />
		    
		    <TextView
		        android:id="@+id/events_location_7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dp"
		        android:layout_marginStart="20dp"
		        android:background="@android:color/transparent"
		        android:text="@string/events_location_7"
		        android:textAlignment="center"
		        android:textColor="@color/white_buttons"
		        android:textSize="14sp" />
	    </LinearLayout>
	
	</LinearLayout>

</ScrollView>
