<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </android.support.v4.view.ViewPager>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/mountain" />

    <TextView
        android:id="@+id/donate_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_background"
        android:gravity="center"
        android:text="@string/donate_title"
        android:textAlignment="center"
        android:textColor="@color/white_buttons"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_transparency"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_donation"
        android:layout_below="@+id/button_donation"
        android:layout_marginTop="18dp"
        android:background="@drawable/blue_button"
        android:ellipsize="none"
        android:text="@string/donate_transparency"
        android:textColor="@color/blue_buttons"
        android:width="200dp"
        android:color="@color/blue_buttons" />

    <Button
        android:id="@+id/button_donation"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donate_days"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:background="@drawable/green_button"
        android:text="@string/donate_donation"
        android:textColor="@color/white_buttons"
        android:textColorHint="@color/blue_buttons"
        android:width="200dp" />

    <ImageView
        android:id="@+id/count_down"
        android:contentDescription=""
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_donation"
        android:layout_alignParentTop="false"
        android:layout_below="@id/donate_title"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:src="@drawable/count_down" />

    <TextView
        android:id="@+id/donate_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/donate_days"
        android:textAlignment="center"
        android:textColor="@color/blue_letters"
        android:textSize="24sp" />

</RelativeLayout>